<resources>
    <string name="app_name">卓光</string>
    <string name="device_name">全自动电位滴定仪</string>
    <string name="user_type">用户类型</string>
    <string-array name="working_electrode_arrays">
        <item>pH电极</item>
        <item>pH复合电极</item>
        <item>铂电极</item>
        <item>银电极</item>
        <item>钙电极</item>
        <item>氟电极</item>
        <item>铜电极</item>
    </string-array>
    <string-array name="titrator_reference_electrode_arrays">
        <item>单盐桥甘汞电极</item>
        <item>双盐桥甘汞电极</item>
        <item>银-氯化银电极</item>
    </string-array>
    <string-array name="titrator_sample_measurement_unit_arryas">
        <item>ml</item>
        <item>g</item>
    </string-array>
    <string-array name="titrator_display_unit_arrays">
        <item>mv</item>
        <item>pH</item>
    </string-array>
    <string-array name="titrator_speed_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="number_0_5">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="titration_Speed">
        <item>极快</item>
        <item>快</item>
        <item>标准</item>
        <item>慢</item>
        <item>极慢</item>
    </string-array>
    <string-array name="titrator_burette_volume_arrays">
        <item>5mL</item>
        <item>10mL</item>
        <item>15mL</item>
    </string-array>
    <string-array name="titrator_theoretical_concentration_unit">
        <item>%</item>
        <item>mol/L</item>
    </string-array>
    <string-array name="titrator_test_end_unit">
        <item>%</item>
        <item>g/mL</item>
        <item>mol/L</item>
    </string-array>
    <string-array name="concentration_type">
        <item>g/l</item>
        <item>g/ml</item>
        <item>g/100ml</item>
    </string-array>
    <string-array name="test_result_type">
        <item>α</item>
        <item>[α]</item>
        <item>C</item>
    </string-array>
    <string-array name="number_decimal">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="titrator_time">
        <item>滴定前</item>
        <item>滴定中</item>
        <item>滴定后</item>
    </string-array>
    <string-array name="number_speed">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="test_atlasY">
        <item>±10°</item>
        <item>±20°</item>
        <item>±30°</item>
        <item>±40°</item>
        <item>±50°</item>
        <item>±60°</item>
        <item>±70°</item>
        <item>±80°</item>
        <item>±90°</item>
    </string-array>
    <string-array name="number_0_9">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="number_1_10">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="number_test">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="test_result_desc_type">
        <item>旋光度</item>
        <item>比旋度</item>
        <item>浓度</item>
    </string-array>
    <string-array name="test_result_unit_type">
        <item>°</item>
        <item>°</item>
        <item>g/l</item>
        <item>g/l</item>
    </string-array>
    <string-array name="temperature_type">
        <item>°C</item>
        <item>K</item>
        <item>°F</item>
    </string-array>
    <string-array name="changeV_type">
        <item>Digipol p610</item>
        <item>Digipol p620</item>
        <item>Digipol p630</item>
        <item>Digipol p910</item>
        <item>Digipol p920</item>
        <item>Digipol p930</item>
    </string-array>
    <string-array name="test_atlasX">
        <item>1小时</item>
        <item>2小时</item>
        <item>4小时</item>
    </string-array>
    <string-array name="test_accuracy">
        <item>快速测量</item>
        <item>高精度测量</item>
    </string-array>
    <string name="language">语言</string>
    <string-array name="bool">
        <item>是</item>
        <item>否</item>
    </string-array>
    <string-array name="number_working_electrode">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="number_reference_electrode">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="number_sample_measurement_unit">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="number_titration_display_unit">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="number_replenishment_speed">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="number_stiring_speed_input">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="number_electroed_equilibration_time">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="nm">nm</string>
    <string name="cm">cm</string>
    <string name="seperate_line">====================================================================</string>
    <string name="sugger">国际糖度</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="user">用户</string>
    <string name="update">版本升级</string>
    <string name="custom">通用设置</string>
    <string name="method_manager">方法管理</string>
    <string name="correct">校正</string>
    <string name="network">网络设置</string>
    <string name="formula">公式编辑</string>
    <string name="audit">审计跟踪</string>
    <string name="initial">初始化</string>
    <string name="factory_initial">出厂设置</string>
    <string name="param_setting">参数设置</string>
    <string name="user_setting">用户设置</string>
    <string name="user_manager">用户管理</string>
    <string name="method_setting">方法设置</string>
    <string name="single_page">单页</string>
    <string name="all_page">全部</string>
    <string name="next_page">下一页</string>
    <string name="pres_page">上一页</string>
    <string name="page">页</string>
    <string name="submit">确认</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="saving">正在保存</string>
    <string name="save_success">保存成功</string>
    <string name="temperature_saving">正在温控</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_ensure">确认删除</string>
    <string name="delete_export_ensure">是否删除已导出</string>
    <string name="password_illegal">两次输入的密码不匹配</string>
    <string name="password_null">密码不能为空</string>
    <string name="new_password_null">新密码不能为空</string>
    <string name="password_error">密码错误</string>
    <string name="prompt">提示</string>
    <string name="no_need_to_delete">请至少选择一项删除</string>
    <string name="only_one_checked">请确认只选择了一个选项</string>
    <string name="checked_ensure">请确认至少选择了一个选项</string>
    <string name="testing_delete_unlimit">正在测试，不能进行删除或修改</string>
    <string name="default_method_name">默认方法名</string>
    <string name="default_test_name">默认测试名</string>
    <string name="file_path">路径</string>
    <string name="file_type">文件类型</string>
    <string name="file_name">文件名</string>
    <string name="title_name">标题</string>
    <string name="title_name1">标题1</string>
    <string name="title_name2">标题2</string>
    <string name="title_name3">标题3</string>
    <string name="changing_to_print">打印文件生成成功</string>
    <string name="title_can_not_be_null">标题不能为空</string>
    <string name="title1_can_not_be_null">标题1不能为空</string>
    <string name="use_detail">详情</string>
    <string name="file_length">文件大小</string>
    <string name="clear">清零</string>
    <string name="current_version">当前版本：</string>
    <string name="newest_version">最新版本：</string>
    <string name="need_update">需要更新：</string>
    <string name="check_update">检查更新</string>
    <string name="export_type_excel_simple">excel-概要</string>
    <string name="export_type_excel_detail">excel-详情</string>
    <string name="export_type_pdf_hsimple">pdf-横版-概要</string>
    <string name="export_type_pdf_vsimple">pdf-竖版-概要</string>
    <string name="export_type_pdf_vdetail">pdf-竖版-详情</string>
    <string name="file_name_can_not_be_null">文件名不能为空</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="layout">排版</string>
    <string name="vertical_simple">竖版-概要</string>
    <string name="vertical_detail">竖版-详情</string>
    <string name="horizontal_simple">横版-概要</string>
    <string name="search">检索</string>
    <string name="print">打印</string>
    <string name="sensitive">热敏打印</string>
    <string name="details">详细</string>
    <string name="delete">删除</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="start_date">起始日期</string>
    <string name="end_date">结束日期</string>
    <string name="create_date">创建日期</string>
    <string name="printer_list">打印机列表</string>
    <string name="creator">创建人</string>
    <string name="creator1">生成</string>
    <string name="creator2">操作员</string>
    <string name="sort_number">序号</string>
    <string name="auth">权限分配</string>
    <string name="auth_and_desc">用户权限分配及备注</string>
    <string name="desc">描述</string>
    <string name="auth_paramsetting">参数设置</string>
    <string name="auth_datadelete">数据删除</string>
    <string name="auth_datasearch">数据检索</string>
    <string name="auth_dataexport">数据导出</string>
    <string name="auth_dataprint">打印</string>
    <string name="auth_dataupload">上传</string>
    <string name="auth_recovery">恢复出厂</string>
    <string name="auth_language">语言切换</string>
    <string name="auth_timeupdate">时间修改</string>
    <string name="auth_correct">用户校正</string>
    <string name="auth_method">方法设置</string>
    <string name="sample_name">样品名称</string>
    <string name="sample_no">样品编号</string>
    <string name="result_type">结果类型</string>
    <string name="temperature">温度</string>
    <string name="test_result">测量值</string>
    <string name="operator">操作人</string>
</resources>