<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="130px"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:text="@string/sort_number"
            android:textAlignment="center"
            android:textColor="@color/fontBlack1"
            android:textSize="32px" />

        <TextView
            android:layout_width="240px"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textAlignment="center"
            android:textColor="@color/fontBlack1"
            android:textSize="32px" />

        <TextView
            android:layout_width="240px"
            android:layout_height="wrap_content"
            android:text="@string/sample_no"
            android:textAlignment="center"
            android:textColor="@color/fontBlack1"
            android:textSize="32px" />

        <TextView
            android:layout_width="180px"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@color/fontBlack1"
            android:textSize="32px" />

        <TextView
            android:layout_width="180px"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/fontBlack1"
            android:textSize="32px" />

        <TextView
            android:layout_width="160px"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:textColor="@color/fontBlack1"
            android:textSize="32px" />

        <TextView
            android:layout_width="180px"
            android:layout_height="wrap_content"
            android:text="@string/result_type"
            android:textAlignment="center"
            android:textColor="@color/fontBlack1"
            android:textSize="32px" />

        <TextView
            android:layout_width="240px"
            android:layout_height="wrap_content"
            android:text="@string/test_result"
            android:textAlignment="center"
            android:textColor="@color/fontBlack1"
            android:textSize="32px" />

        <TextView
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:text="@string/operator"
            android:textAlignment="center"
            android:textColor="@color/fontBlack1"
            android:textSize="32px" />
    </LinearLayout>

    <ListView
        android:id="@+id/export_sh2_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>
