<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray1"
    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textColor="@color/fontWhite"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/data_export_file_name"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/edit_text_white"
            android:imeOptions="actionDone"
            android:nextFocusDown="@+id/data_export_title1"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/title_name1"
            android:textColor="@color/fontWhite"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/data_export_title1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/edit_text_white"
            android:imeOptions="actionDone"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/title_name2"
            android:textColor="@color/fontWhite"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/data_export_title2"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/edit_text_white"
            android:imeOptions="actionDone"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/title_name3"
            android:textColor="@color/fontWhite"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/data_export_title3"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/edit_text_white"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/file_type"
            android:textColor="@color/fontWhite"
            android:textSize="14sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/data_export_export_type_excel_simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="14sp"
                android:textColor="@color/fontWhite"
                android:text="@string/export_type_excel_simple"></RadioButton>

            <RadioButton
                android:id="@+id/data_export_export_type_excel_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="14sp"
                android:textColor="@color/fontWhite"
                android:text="@string/export_type_excel_detail"></RadioButton>

            <RadioButton
                android:id="@+id/data_export_export_type_pdf_hsimple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/fontWhite"
                android:text="@string/export_type_pdf_hsimple"></RadioButton>

            <RadioButton
                android:id="@+id/data_export_export_type_pdf_vsimple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/fontWhite"
                android:text="@string/export_type_pdf_vsimple"></RadioButton>

            <RadioButton
                android:id="@+id/data_export_export_type_pdf_vdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/fontWhite"
                android:text="@string/export_type_pdf_vdetail"></RadioButton>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_export_save_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/black_button"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/fontWhite"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>